and again by adding tidyverse to yml

--- a/.github/workflows/quarto-gh-pages-html.yaml
+++ b/.github/workflows/quarto-gh-pages-html.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           packages:
             any::knitr
+            any::tidyverse
             any::rmarkdown
             any::downlit
             any::xml2
