and again, adding pkgs

--- a/.github/workflows/quarto-gh-pages-html.yaml
+++ b/.github/workflows/quarto-gh-pages-html.yaml
@@ -32,6 +32,8 @@ jobs:
           packages:
             any::knitr
             any::rmarkdown
+            any tidyverse
+            any:kableExtra
             any::downlit
             any::xml2
       - name: Install Quarto
