--- a/.github/workflows/quarto-gh-pages-html.yaml
+++ b/.github/workflows/quarto-gh-pages-html.yaml
@@ -32,7 +32,7 @@ jobs:
           packages:
             any::knitr
             any::rmarkdown
-            any tidyverse
+            any::tidyverse
             any::downlit
             any::xml2
       - name: Install Quarto
