workshop toc added to wk6 ws; update renv

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,14 @@ website:
     page-navigation: true
     search: true
     page-footer:
-      center: '`r paste("Please cite as: ", cffr::cff_to_bibtex("CITATION.cff"))`'
+      left: '`r paste("Please cite as: ", cffr::cff_to_bibtex("CITATION.cff"))`'
+      right:
+        - icon: twitter
+          href: https://twitter.com/er_13
+          aria-label: Quarto Twitter
+        - icon: github
+          href: https://github.com/3mmaRand/R4BABS
+          aria-label: R4BABS GitHub
     left:
       - text: "Welcome!"
         file: index.qmd
@@ -28,7 +35,7 @@ website:
         text: Emma's Twitter
       - icon: github
         href: https://github.com/3mmaRand/R4BABS
-        text: R4BABS on GitHub
+        text: R4BABS GitHub
 
   sidebar:
     - title: "BABS 1"
@@ -138,6 +145,12 @@ format:
     code-link: true
     code-overflow: wrap
     code-line-numbers: false
+    grid:
+      sidebar-width: 250px
+      body-width: 900px
+      margin-width: 300px
+    
+    author-meta: Emma Rand
 
 bibliography: references.bib
 
