--- a/_quarto.yml
+++ b/_quarto.yml
@@ -141,6 +141,7 @@ format:
   html:
     link-external-icon: true
     link-external-newwindow: true
+    link-external-filter: '^(?:http:|https:)\/\/3mmarand\.github\.io\/R4BABS'
     theme:
       light: [cosmo, theme.scss]
     code-copy: true
