--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,7 +30,7 @@ website:
       - text: "BABS 2"
         file:  r4babs2/r4babs2.qmd
       - text: "PGT 52M"
-        file:  pgt52m/pgt52.qmd
+        file:  pgt52m/pgt52m.qmd
     tools:
       - icon: twitter
         href: https://twitter.com/er_13
