--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 website:
   title: "Data Analysis in R "
   page-footer:
-    left: "Please cite as: `r cffr::cff_to_bibtex('CITATION.cff`)`"
+    left: "Please cite as: `r cffr::cff_to_bibtex('CITATION.cff')`"
     right:
       - icon: twitter
         href: https://twitter.com/er_13
