--- a/.github/workflows/quarto-gh-pages-html.yaml
+++ b/.github/workflows/quarto-gh-pages-html.yaml
@@ -10,40 +10,62 @@ on:
 
 name: Render and deploy Book
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-      - name: Install additional libraries on Linux
-        if: runner.os == 'Linux'
-        run: | 
-          sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev
-          sudo apt-get install -y libharfbuzz-dev 
-          sudo apt-get install -y libfribidi-dev
           
       - uses: r-lib/actions/setup-renv@v2
 
       - name: Install Quarto
-        uses: quarto-dev/quarto-actions/install-quarto@v1
- 
-      # Install any computing dependency you may need, usually either python and Jupyter or R
-      # More specific examples will be shared on quarto-dev/quarto-actions project
+        uses: quarto-dev/quarto-actions/setup@v2
 
-      - name: Render book to all format
-        # Add any command line argument needed
-        run: |
-          quarto render
-      - name: Deploy 🚀
-        # only deploy when push to main
-        if: github.event_name != 'pull_request'
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Render Quarto project
+        uses: quarto-dev/quarto-actions/render@v2
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          # The branch the action should deploy to.
-          branch: gh-pages
-          # The folder the action should deploy. Adapt if you changed in Quarto config
-          folder: _site
+          # hard-coding `_site` feels a little gross, but it works
+          path: _site
+          
+      - name: Report and test locale
+        run: |
+          Sys.getlocale("LC_COLLATE")
+          sort(c("apple", "Banana", "candle"))
+          withr::with_locale(
+            new = c(LC_COLLATE = "C"),
+            sort(c("apple", "Banana", "candle"))
+          )
+        shell: Rscript {0}
+      
+  deploy:
+    if: github.event_name != 'pull_request'
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - uses: actions/checkout@v3
+        
+      - name: Setup pages
+        uses: actions/configure-pages@v3
+        
+      - name: Deploy to GitHub pages
+        id: deployment
+        uses: actions/deploy-pages@v2
+        
+
+
