--- a/_quarto.yml
+++ b/_quarto.yml
@@ -255,7 +255,7 @@ website:
              - href: pgt52m/week-8/study_after_workshop.qmd
                text: Consolidate!
           - text: ---
-          - section: "Week 9: Inyroduction to the Assessment"
+          - section: "Week 9: Introduction to the Assessment"
             contents:
              - href:
                text: About
