--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,11 @@ project:
 
 website:
   title: "Data Analysis in R "
+    cookie-consent:
+    type: implied
+    style: headline
+    palette: light
+  google-analytics: "GTM-NRNMRXJ3"
   page-footer:
     left: "Rand, E. (2023). Data Analysis in R for Becoming a Bioscientist (Version 0.1) <https://github.com/3mmaRand/R4BABS>"
     right:
