fix some typos in babs1 week-8 workshop; chane cookie consent view

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ website:
   title: "Data Analysis in R "
   cookie-consent:
     type: implied
-    style: headline
+    style: simple
     palette: light
   google-analytics: "G-50FV9HPTRE"
 
