--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,10 +13,10 @@ website:
   page-footer:
     left: "Rand, E. (2023). Data Analysis in R for Becoming a Bioscientist (Version 0.1) <https://github.com/3mmaRand/R4BABS>"
     right:
-      - icon: twitter
-        href: https://twitter.com/er_13
-        aria-label: Twitter
-      - icon: github
+      - text: "{{< iconify fa6-brands mastodon >}}"
+        href: https://mastodon.social/@3mma
+        aria-label: Mastodon
+      - text: "{{< iconify fa6-brands github >}}"
         href: https://github.com/3mmaRand/R4BABS
         aria-label: R4BABS GitHub
   navbar:
@@ -35,15 +35,17 @@ website:
         file:  r4babs1/r4babs1.qmd
       - text: "BABS 2"
         file:  r4babs2/r4babs2.qmd
+      - text: "BABS 4"
+        file:  r4babs2/r4babs4.qmd
       - text: "PGT 52M"
         file:  pgt52m/pgt52m.qmd
     tools:
-      - icon: twitter
-        href: https://twitter.com/er_13
-        text: Emma's Twitter
-      - icon: github
+      - text: "{{< iconify fa6-brands mastodon >}}"
+        href: https://mastodon.social/@3mma
+        aria-label: Mastodon
+      - text: "{{< iconify fa6-brands github >}}"
         href: https://github.com/3mmaRand/R4BABS
-        text: R4BABS GitHub
+        aria-label: "R4BABS GitHub"
 
   sidebar:
     - title: "BABS 1"
@@ -165,6 +167,55 @@ website:
              - href: r4babs2/week-6/workshop.qmd
                text: Workshop
              - href: r4babs2/week-6/study_after_workshop.qmd
+               text: Consolidate!
+    - title: "BABS 4"
+      style: "floating"
+      contents:
+          - href: r4babs4/r4babs4.qmd
+          - text: ---
+          - text: ---
+          - section: "Week 1: DA 1 Core"
+            contents:
+             - href: r4babs4/week-1/overview.qmd
+               text: About
+             - href: r4babs4/week-1/study_before_workshop.qmd
+               text: Prepare!
+             - href: r4babs2/week-1/workshop.qmd
+               text: Workshop
+             - href: r4babs4/week-1/study_after_workshop.qmd
+               text: Consolidate!
+          - text: ---
+          - section: "Week 2: DA 2 Immunobiology"
+            contents:
+             - href: r4babs4/week-2/overview.qmd
+               text: About
+             - href: r4babs4/week-2/study_before_workshop.qmd
+               text: Prepare!
+             - href: r4babs4/week-2/workshop.qmd
+               text: Workshop
+             - href: r4babs4/week-2/study_after_workshop.qmd
+               text: Consolidate!
+          - text: ---
+          - section: "Week 4: DA 3 Immunobiology"
+            contents:
+             - href: r4babs4/week-4/overview.qmd
+               text: About
+             - href: r4babs4/week-4/study_before_workshop.qmd
+               text: Prepare!
+             - href: r4babs4/week-4/workshop.qmd
+               text: Workshop
+             - href: r4babs4/week-4/study_after_workshop.qmd
+               text: Consolidate!
+          - text: ---
+          - section: "Week 6: DA 4 Immunobiologyn"
+            contents:
+             - href: r4babs4/week-6/overview.qmd
+               text: About
+             - href: r4babs4/week-6/study_before_workshop.qmd
+               text: Prepare!
+             - href: r4babs4/week-6/workshop.qmd
+               text: Workshop
+             - href: r4babs4/week-6/study_after_workshop.qmd
                text: Consolidate!
     - title: "PGT 52M"
       style: "floating"
