--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,14 +13,8 @@ website:
   page-footer:
     left: "Rand, E. (2023). Data Analysis in R for Becoming a Bioscientist (Version 0.1) <https://github.com/3mmaRand/R4BABS>"
     right:
-      # - text: "{{< iconify fa6-brands mastodon >}}"
-      #   href: "https://mastodon.social/@3mma"
-      #   aria-label: Mastodon
-      # - text: "{{< iconify fa6-brands github >}}"
-      #   href: "https://github.com/3mmaRand/R4BABS"
-      #   aria-label: "R4BABS GitHub"
       - icon: mastodon
-        href: "https://mastodon.social/@3mma"
+        href: "https://mastodon.social/%403mma"
       - icon: github
         href: https://github.com/3mmaRand/R4BABS
   
@@ -45,14 +39,8 @@ website:
       - text: "PGT 52M"
         file:  pgt52m/pgt52m.qmd
     tools:
-      # - text: "{{< iconify fa6-brands mastodon >}}"
-      #   href: "https://mastodon.social/@3mma"
-      #   aria-label: Mastodon
-      # - text: "{{< iconify fa6-brands github >}}"
-      #   href: "https://github.com/3mmaRand/R4BABS"
-      #   aria-label: "R4BABS GitHub"
       - icon: mastodon
-        href: "https://mastodon.social/@3mma"
+        href: "https://mastodon.social/%403mma"
       - icon: github
         href: https://github.com/3mmaRand/R4BABS
 
