try creating an .Renviron file to disable renv sandbox

--- a/.github/workflows/quarto-gh-pages-html.yaml
+++ b/.github/workflows/quarto-gh-pages-html.yaml
@@ -39,7 +39,10 @@ jobs:
         run: |
           R -e "install.packages('xml2')"
           R -e "install.packages('downlit')"
-
+     
+      - name: Create and populate .Renviron file
+        run: |
+          echo "RENV_CONFIG_SANDBOX_ENABLED=FALSE" >> ~/.Renviron
 
 
       - name: Render book to all format
