Use the long-form Mastodon URL so pandoc stops complaining

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,7 @@ website:
     left: "Rand, E. (2023). Data Analysis in R for Becoming a Bioscientist (Version 0.1) <https://github.com/3mmaRand/R4BABS>"
     right:
       - icon: mastodon
-        href: "https://mastodon.social/%403mma"
+        href: "https://mastodon.social/users/3mma"
       - icon: github
         href: https://github.com/3mmaRand/R4BABS
   
@@ -40,7 +40,7 @@ website:
         file:  pgt52m/pgt52m.qmd
     tools:
       - icon: mastodon
-        href: "https://mastodon.social/%403mma"
+        href: "https://mastodon.social/users/3mma"
       - icon: github
         href: https://github.com/3mmaRand/R4BABS
 
